
    o   [RF] added length.jobjRef and length.jarrayRef to query the number
        of objects in a java array. An error message is generated if the 
        object is not an array

    o   [RF] added "length" pseudo field for java arrays in syntactic sugar 
        and with semantics
        
    o   [RF] R-style indexing of java arrays using [, [[, head and tail

0.7-1	(under development)
    o	[RF] added .J high-level java constructor (based on reflection 
	as opposed to complete match as .jnew does)

    o	[RF] added .jinstanceof and instanceof operator

    o	when loaded into another JVM (e.g. via JRI), rJava would crash
	on any call if .jinit() was missing. Now it correctly reports
	the error.

    o	fixed synchronization issues in both JRI and REngine

0.7-0	2009-08-22
    o	fixed bug in $ getter of fields using old .jfield API

    o	fixed a bug in .jevalArray which failed when the signature
	was specified directly (and subsequently .jfield failed in
	most cases)

    o	improve speed of reflection-based API (.jrcall and `$')
	by using native array support in rJava

    o	reflection API now returns NULL invisibly for void results

    o	try to find the best match in reflection-based API
	using internal Java code (code and idea by
	Romain Francois)

    o	added with() method for jobjRef (by Romain Francois), see
	http://romainfrancois.blog.free.fr/index.php?
	post/2009/06/17/with-semantics-for-java-objects-in-rJava

    o	added names() method for jobjRef to facilitate code
	completion (based on code by RF: http://tr.im/w33B)

    o	update to JRI 0.5-0

0.6-3	2009-06-14
    o	update to JRI 0.4-3 (adds REngine API, enhanced support for
	environments and references)

    o	allow signatures longer than 256 bytes

    o	added lib.loc parameter to .jpackage()

0.6-2	2009-01-26
    o	fix --enable-debug to really enable debug code

    o	improve Windows setup (add only paths if they are not already
	listed and check thier presence first) and warn if the system